--- a/src/app/segundo-componente/segundo-componente.component.html
+++ b/src/app/segundo-componente/segundo-componente.component.html
@@ -1,4 +1,5 @@
 <h2>Aprofundando os conhecimentos em templates</h2>
-
+<img [src]="urlImagem" alt="caipira" width="300px">
 <p>Nome: {{ nome | uppercase}}</p>
 <p>Data de nascimento: {{ dataNascimento | date: "dd/MM/yyyy" }}</p>
+<button (click)="mostrarDataNascimeto()" type="button">Mostrar dade de nascimento</button>
