--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<app-primeiro-componente></app-primeiro-componente>
+<!-- <app-primeiro-componente></app-primeiro-componente>
 <app-segundo-componente></app-segundo-componente>
 <app-pipe-customizado></app-pipe-customizado>
 <app-two-way-data-binding></app-two-way-data-binding>
-<app-renderizando-listas></app-renderizando-listas>
+<app-renderizando-listas></app-renderizando-listas> -->
+
+<app-componente-personalizado nome="Maria" sobreNome=" da Silva Garcia"></app-componente-personalizado>
+<app-componente-personalizado nome="Maria" sobreNome="José Garcia"></app-componente-personalizado>
