Interação entre componentes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,7 @@
 <app-two-way-data-binding></app-two-way-data-binding>
 <app-renderizando-listas></app-renderizando-listas> -->
 
-<app-componente-personalizado nome="Maria" sobreNome=" da Silva Garcia"></app-componente-personalizado>
-<app-componente-personalizado nome="Maria" sobreNome="José Garcia"></app-componente-personalizado>
+<!-- <app-componente-personalizado nome="Maria" sobreNome=" da Silva Garcia"></app-componente-personalizado>
+<app-componente-personalizado nome="Maria" sobreNome="José LeonardoGarcia"></app-componente-personalizado> -->
+
+<app-componente-pai></app-componente-pai>
