--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,7 @@
 <!-- <app-componente-personalizado nome="Maria" sobreNome=" da Silva Garcia"></app-componente-personalizado>
 <app-componente-personalizado nome="Maria" sobreNome="José LeonardoGarcia"></app-componente-personalizado> -->
 
-<app-componente-pai></app-componente-pai>
+<!-- <app-componente-pai></app-componente-pai> -->
+
+<app-exemplo-servicos1></app-exemplo-servicos1>
+<app-exemplo-servicos2></app-exemplo-servicos2>
