--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,7 @@
 
 <!-- <app-componente-pai></app-componente-pai> -->
 
-<app-exemplo-servicos1></app-exemplo-servicos1>
-<app-exemplo-servicos2></app-exemplo-servicos2>
+<!-- <app-exemplo-servicos1></app-exemplo-servicos1>
+<app-exemplo-servicos2></app-exemplo-servicos2> -->
+
+<app-ciclo-de-vida-pai></app-ciclo-de-vida-pai>
