--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,31 @@
-<!-- <app-primeiro-componente></app-primeiro-componente>
-<app-segundo-componente></app-segundo-componente>
-<app-pipe-customizado></app-pipe-customizado>
-<app-two-way-data-binding></app-two-way-data-binding>
-<app-renderizando-listas></app-renderizando-listas> -->
+<app-card titulo="Primeiro componente" cor="#3D4D63">
+    <app-primeiro-componente></app-primeiro-componente>
+</app-card>
+<app-card titulo="Aprofundando os conhecimentos em templates" cor="#B2E7E8">
+    <app-segundo-componente></app-segundo-componente>    
+</app-card >
+<app-card titulo="Pipes" cor="#bbf">
+    <app-pipe-customizado></app-pipe-customizado>
+</app-card>
+<app-card titulo="Two-way Data Binding" cor="#00fb">
+    <app-two-way-data-binding></app-two-way-data-binding>
+</app-card>
+<app-card titulo="Renderizando listas" cor="#abc">
+    <app-renderizando-listas></app-renderizando-listas>
+</app-card>
 
-<!-- <app-componente-personalizado nome="Maria" sobreNome=" da Silva Garcia"></app-componente-personalizado>
-<app-componente-personalizado nome="Maria" sobreNome="José LeonardoGarcia"></app-componente-personalizado> -->
+<app-card titulo="Componentes personalizado (Input)" cor="#ddd">
+    <app-componente-personalizado nome="Maria" sobreNome=" da Silva Garcia"></app-componente-personalizado>
+    <app-componente-personalizado nome="Maria" sobreNome="José LeonardoGarcia"></app-componente-personalizado>
+</app-card>
 
-<!-- <app-componente-pai></app-componente-pai> -->
-
-<!-- <app-exemplo-servicos1></app-exemplo-servicos1>
-<app-exemplo-servicos2></app-exemplo-servicos2> -->
-
-<app-ciclo-de-vida-pai></app-ciclo-de-vida-pai>
+<app-card titulo="Compartilhando dados entre componentes" cor="#eee">
+    <app-componente-pai></app-componente-pai>
+</app-card>
+<app-card titulo="Serviços " cor="#eee" >
+    <app-exemplo-servicos1></app-exemplo-servicos1>
+    <app-exemplo-servicos2></app-exemplo-servicos2>
+</app-card>
+<app-card titulo="Ciclo de vida">
+    <app-ciclo-de-vida-pai></app-ciclo-de-vida-pai>
+</app-card>
